phew...almost done

--- a/css/main.css
+++ b/css/main.css
@@ -41,13 +41,13 @@
   /* End of CSS for Landing Section */
   
   /* Who We Are Section */
-  #whoWeAre {
+  #whoAmI {
     background-color: green;
   }
   /* End of Who We Are Section */
   
   /* What We Do Section */
-  #whatWeDo {
+  #whatIDo {
     background-color: green;
   }
   
