--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
   #deltaLogoDiv {
     padding: 80px 0px 40px 0px;
     text-align: center;
-    animation: sexyGlow 4s ease-in-out 0s infinite;
+    animation: sexyGlow 3s ease-in-out 0s infinite;
   }
   
   /* CSS for Scramble Text */
@@ -23,7 +23,7 @@
   }
   
   .text {
-    font-weight: 600;
+    font-weight: 800;
     font-size: 34px;
     color: green;
   }
@@ -37,46 +37,30 @@
   .dud {
     color: green;
   }
-  /* End of CSS for Scramble Text */
-  /* End of CSS for Landing Section */
+ 
   
-  /* Who We Are Section */
+  
   #whoAmI {
     background-color: green;
   }
-  /* End of Who We Are Section */
   
-  /* What We Do Section */
+  
+  
   #whatIDo {
     background-color: green;
   }
   
-  #whatWeDoImage {
+  #whatIDoImage {
     margin: 10px 0px;
   }
   
   p.section-1-content {
     text-align: justify;
-  }
-  /* End of What We Do Section */
-  
-  /* Events Section */
-  #events {
-    background-color: #212121;
-    border-bottom: 1px solid rgb(70,70,70);
+    font-weight: 300;
+    font-size: 20px;
   }
   
-  #events .subtopic, .event p {
-    color: white;
-  }
-  
-  .event .subtopic {
-    font-size: 26px;
-  }
-  
-  .event img {
-    margin: 20px 0px;
-  }
+ 
   
   /* Animation stuff */
   @keyframes sexyGlow {
@@ -102,15 +86,12 @@
       padding: 0px;
     }
   
-    #whoWeAreImage {
+    #whoIAmImage {
       width: 100%;
     }
   
-    #events {
-      padding: 15px 0px;
-    }
   
-    #whatWeDoImage {
+    #whatIDoImage {
       margin: 0px;
     }
   
@@ -118,9 +99,7 @@
       margin-bottom: 15px;
     }
   
-    .event-image {
-      width: 75%;
-    }
+    
   }
 
   
